# matrix-appservice-discord-rs

./: Cargo.toml
src/: config.rs  error.rs  lib.rs  main.rs
