[package]
name = "matrix-appservice-discord-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3", features = [ "derive" ] }
matrix-sdk-appservice = { git = "https://github.com/matrix-org/matrix-rust-sdk.git" }
serde = "1.0"
serde_yaml = "0.9.22"
serenity = "0.11"
tokio = { version = "1", features = [ "full" ] }
toml = "0.7"
url = "2.4.0"
uuid = "1.4.0"
